--- a/my_app/package.json
+++ b/my_app/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "lib-flexible": "^0.3.2",
+    "px2rem-loader": "^0.1.9",
     "vant": "^2.2.16",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
